--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@
 /scene_import/build
 /scene_import/data
 /scene_import/script/tpack.py
-/background_import/data/*.ep
+/background_import/data
 deprecated
