实现ipad版商店界面

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ deprecated
 /editor_bin/ui2.ori.lua
 /editor_bin/ui21.png
 /editor_bin/ui21.json
+/editor_bin/arnan_*
 
 # temporary
 /tools-src/depends/src
