--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@ deprecated
 /cloud_import/data
 
 /editor_bin/ui2.ori.lua
-/editor_bin/ui21.png
-/editor_bin/ui21.json
+/editor_bin/ui2*.png
+/editor_bin/ui2*.json
 /editor_bin/arnan_*
 
 # temporary
