--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,8 @@ deprecated
 /editor_bin/ui2*.json
 /editor_bin/arnan_*
 
+/pentagon_import/pt_char.lua
+/pentagon_import/pt_hero.lua
+
 # temporary
 /tools-src/depends/src
