--- a/sg_ui/barrack_finishnow_times_fontblank.json
+++ b/sg_ui/barrack_finishnow_times_fontblank.json
@@ -1,10 +1,10 @@
 
 {
-	"align" : 1.0,
+	"align" : 0.0,
 	"color" : "0xffffffff",
 	"font" : "",
 	"height" : 32.0,
-	"name" : "barrack_finishnow_price",
+	"name" : "barrack_finishnow_times",
 	"size" : 16.0,
 	"width" : 50.0
 }
