--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ deprecated
 /editor_bin/ui2*.json
 /editor_bin/arnan_*
 /editor_bin/build_loading
+/editor_bin/build_loading_p91
 
 /pentagon_import/pt_char.lua
 /pentagon_import/pt_hero.lua
