添加更新sg_ui 文件

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ deprecated
 /editor_bin/arnan_*
 /editor_bin/build_loading
 /editor_bin/build_loading_p91
-/editor_bin/ui_output
+/editor_bin/ui_output/ui2.ori.lua
 
 /pentagon_import/pt_char.lua
 /pentagon_import/pt_hero.lua
