提取出undo,redo的代码

--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1800,6 +1800,14 @@
 					RelativePath="..\..\..\src\drag2d\view\EditPanelDefs.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\HistoryList.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\HistoryList.h"
+					>
+				</File>
 				<Filter
 					Name="physics"
 					>
