增加存取操作队列信息

--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -457,6 +457,18 @@
 				RelativePath="..\..\..\src\drag2d\history\AbstractAtomicOP.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\history\AtomicFactory.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\history\AtomicFactory.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\history\AtomicType.h"
+				>
+			</File>
 			<Filter
 				Name="arrange"
 				>
