改变复制关键帧的操作,增加child字段,之前的根据symbol名称的方法不准确

--- a/editor_src2/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/editor_src2/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -215,6 +215,14 @@
 					RelativePath="..\..\..\src\easyanimation\dataset\LayersMgr.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\easyanimation\dataset\Sprite.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyanimation\dataset\Sprite.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
