动画编辑时move和rotate的继承

--- a/editor_src2/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/editor_src2/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -223,6 +223,14 @@
 					RelativePath="..\..\..\src\easyanimation\dataset\Sprite.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\easyanimation\dataset\SpriteObserver.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyanimation\dataset\SpriteObserver.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
