--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1780,6 +1780,14 @@
 					Name="symbol"
 					>
 					<File
+						RelativePath="..\..\..\src\drag2d\view\ComplexPropertySetting.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\view\ComplexPropertySetting.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\drag2d\view\Scale9PropertySetting.cpp"
 						>
 					</File>
