--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ deprecated
 /editor_bin/build_loading
 /editor_bin/build_loading_p91
 /editor_bin/build_loading_mmzb
+/editor_bin/ui_output
 
 /pentagon_import/pt_char.lua
 /pentagon_import/pt_hero.lua
