增加一些lua用的接口

--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -657,14 +657,6 @@
 		<Filter
 			Name="dataset"
 			>
-			<File
-				RelativePath="..\..\..\src\drag2d\dataset\wrap_Dataset.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\dataset\wrap_Dataset.h"
-				>
-			</File>
 			<Filter
 				Name="body"
 				>
@@ -814,6 +806,14 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\drag2d\dataset\SelectionSet.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\dataset\wrap_SelectionSet.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\dataset\wrap_SelectionSet.h"
 					>
 				</File>
 			</Filter>
