两个方向的框选

--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1213,6 +1213,10 @@
 				RelativePath="..\..\..\src\drag2d\render\Shader.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\render\ShapeStyle.h"
+				>
+			</File>
 			<Filter
 				Name="opengl"
 				>
