--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1354,6 +1354,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\drag2d\common\Local2D.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\drag2d\common\Log.h"
 				>
 			</File>
