骨骼数据帧间拷贝

--- a/editor_src2/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/editor_src2/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -235,6 +235,14 @@
 					RelativePath="..\..\..\src\easyanimation\dataset\Joint.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\easyanimation\dataset\SkeletonData.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyanimation\dataset\SkeletonData.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
@@ -327,14 +335,6 @@
 			<Filter
 				Name="stage"
 				>
-				<File
-					RelativePath="..\..\..\src\easyanimation\view\SkeletonData.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\easyanimation\view\SkeletonData.h"
-					>
-				</File>
 				<File
 					RelativePath="..\..\..\src\easyanimation\view\StageCanvas.cpp"
 					>
