--- a/editor_src2/coceditor/platform/msvc2008/projects/cocextract.vcproj
+++ b/editor_src2/coceditor/platform/msvc2008/projects/cocextract.vcproj
@@ -182,6 +182,14 @@
 	</References>
 	<Files>
 		<File
+			RelativePath="..\..\..\src\cocextract\ImageHelper.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\cocextract\ImageHelper.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\cocextract\main.cpp"
 			>
 		</File>
