从lua文件导出complex文件

--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -988,6 +988,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\src\drag2d\dataset\NullSprite.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\drag2d\dataset\SpriteFactory.cpp"
 						>
 					</File>
@@ -1097,6 +1101,10 @@
 					</File>
 					<File
 						RelativePath="..\..\..\src\drag2d\dataset\ISymbol.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\dataset\NullSymbol.h"
 						>
 					</File>
 					<File
