--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ deprecated
 /editor_src2/coceditor/platform/msvc2008/cocextrude
 /editor_src2/coceditor/platform/msvc2008/cocpackage
 /editor_src2/coceditor/platform/msvc2008/imagebool
+/editor_src2/coceditor/platform/msvc2008/libcoco
 /editor_src2/drag2d/.git
 /editor_src2/drag2d/.gitignore
 /editor_src2/drag2d/LICENSE
