anim相关信息移到libanim中

--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\src\drag2d;..\..\..\src\common;..\..\..\..\easyshape\src;&quot;..\..\..\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src"
+				AdditionalIncludeDirectories="..\include;..\..\..\src\drag2d;..\..\..\src\common;..\..\..\..\easyshape\src;&quot;..\..\..\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\easyanim\src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -108,7 +108,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="0"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\include;..\..\..\src\drag2d;..\..\..\src\common;..\..\..\..\easyshape\src;&quot;..\..\..\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src"
+				AdditionalIncludeDirectories="..\include;..\..\..\src\drag2d;..\..\..\src\common;..\..\..\..\easyshape\src;&quot;..\..\..\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\easyanim\src"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -897,14 +897,6 @@
 				Name="sprite"
 				>
 				<File
-					RelativePath="..\..\..\src\drag2d\dataset\AnimSprite.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\drag2d\dataset\AnimSprite.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\..\src\drag2d\dataset\CombinationSprite.cpp"
 					>
 				</File>
@@ -1012,14 +1004,6 @@
 			<Filter
 				Name="symbol"
 				>
-				<File
-					RelativePath="..\..\..\src\drag2d\dataset\AnimSymbol.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\drag2d\dataset\AnimSymbol.h"
-					>
-				</File>
 				<File
 					RelativePath="..\..\..\src\drag2d\dataset\CombinationSymbol.cpp"
 					>
@@ -1677,18 +1661,6 @@
 					</File>
 					<File
 						RelativePath="..\..\..\src\drag2d\view\LibraryFontPage.h"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="anim"
-					>
-					<File
-						RelativePath="..\..\..\src\drag2d\view\LibraryAnimPage.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\drag2d\view\LibraryAnimPage.h"
 						>
 					</File>
 				</Filter>
