--- a/editor_src2/easyanim/platform/msvc2008/projects/libanim.vcproj
+++ b/editor_src2/easyanim/platform/msvc2008/projects/libanim.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\coceditor\src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -107,7 +107,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\coceditor\src"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -192,6 +192,54 @@
 				RelativePath="..\..\..\src\libanim\Tools.h"
 				>
 			</File>
+		</Filter>
+		<Filter
+			Name="dataset"
+			>
+			<File
+				RelativePath="..\..\..\src\libanim\Sprite.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libanim\Sprite.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libanim\Symbol.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libanim\Symbol.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="view"
+			>
+			<Filter
+				Name="library"
+				>
+				<File
+					RelativePath="..\..\..\src\libanim\LibraryPage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libanim\LibraryPage.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="property"
+				>
+				<File
+					RelativePath="..\..\..\src\libanim\PropertySetting.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libanim\PropertySetting.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
