添加ejoy2d到编辑器

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ deprecated
 /editor_src2/coceditor/platform/msvc2008/cocpackage
 /editor_src2/coceditor/platform/msvc2008/imagebool
 /editor_src2/coceditor/platform/msvc2008/libcoco
+/editor_src2/ejoy2d
 /editor_src2/drag2d/.git
 /editor_src2/drag2d/.gitignore
 /editor_src2/drag2d/LICENSE
