打包ejoy2d格式的数据

--- a/editor_src2/coceditor/platform/msvc2008/projects/libcoco.vcproj
+++ b/editor_src2/coceditor/platform/msvc2008/projects/libcoco.vcproj
@@ -150,11 +150,27 @@
 	</References>
 	<Files>
 		<File
+			RelativePath="..\..\..\src\libcoco\PackLuaFile.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\libcoco\PackLuaFile.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\libcoco\ParserLuaFile.cpp"
 			>
 		</File>
 		<File
 			RelativePath="..\..\..\src\libcoco\ParserLuaFile.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\libcoco\TexturePacker.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\libcoco\TexturePacker.h"
 			>
 		</File>
 	</Files>
