存image文件的逻辑放到d2d中

--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -789,6 +789,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\dataset\ImageSaver.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\dataset\ImageSaver.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\common\Matrix.cpp"
 					>
 				</File>
