--- a/editor_src2/coceditor/platform/msvc2008/projects/libcoco.vcproj
+++ b/editor_src2/coceditor/platform/msvc2008/projects/libcoco.vcproj
@@ -150,6 +150,14 @@
 	</References>
 	<Files>
 		<File
+			RelativePath="..\..\..\src\libcoco\CocoPacker.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\libcoco\CocoPacker.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\libcoco\PackLuaFile.cpp"
 			>
 		</File>
