--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1342,6 +1342,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\drag2d\common\filetools.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\common\filetools.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\drag2d\common\interface.h"
 				>
 			</File>
