--- a/editor_src2/coceditor/platform/msvc2008/projects/libcoco.vcproj
+++ b/editor_src2/coceditor/platform/msvc2008/projects/libcoco.vcproj
@@ -174,6 +174,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\libcoco\SymbolsPrepare.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\libcoco\SymbolsPrepare.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\libcoco\TexturePacker.cpp"
 			>
 		</File>
